--- a/TranslateBot/appsettings.json
+++ b/TranslateBot/appsettings.json
@@ -1,4 +1,7 @@
 {
   "MicrosoftAppId": "",
-  "MicrosoftAppPassword": ""
+  "MicrosoftAppPassword": "",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=wwwroot/TranslateBot.db"
+  }
 }
