Добавлен механизм журналирования через NLog

--- a/TranslateBot/appsettings.json
+++ b/TranslateBot/appsettings.json
@@ -3,5 +3,11 @@
   "MicrosoftAppPassword": "",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=wwwroot/TranslateBot.db"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Trace",
+      "Microsoft": "Information"
+    }
   }
 }
