--- a/TranslateBot/appsettings.json
+++ b/TranslateBot/appsettings.json
@@ -2,7 +2,7 @@
   "MicrosoftAppId": "",
   "MicrosoftAppPassword": "",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=wwwroot/TranslateBot.db"
+    "ApplicationContext": "Data Source=wwwroot/TranslateBot.db"
   },
   "Logging": {
     "LogLevel": {
