Реализован механизм перевода текста

--- a/TranslateBot/appsettings.json
+++ b/TranslateBot/appsettings.json
@@ -1,6 +1,7 @@
 {
   "MicrosoftAppId": "",
   "MicrosoftAppPassword": "",
+  "TranslatorKey": "6413196488604f0d9ae7c1ac83f8dd18",
   "ConnectionStrings": {
     "ApplicationContext": "Data Source=wwwroot/TranslateBot.db"
   },
