Выполнен рефакторинг кода

--- a/TranslateBot/TranslateBot.csproj
+++ b/TranslateBot/TranslateBot.csproj
@@ -5,6 +5,14 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <CodeAnalysisRuleSet>TranslateBot.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <CodeAnalysisRuleSet>TranslateBot.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Migrations\20190804023833_InitialCreate.cs" />
     <Compile Remove="Migrations\20190804023833_InitialCreate.Designer.cs" />
