--- a/TranslateBot/appsettings.json
+++ b/TranslateBot/appsettings.json
@@ -10,5 +10,8 @@
       "Default": "Trace",
       "Microsoft": "Information"
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "d8920260-7602-4f9b-87b7-26594d52c73f"
   }
 }
